--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -6,6 +6,12 @@
       <div class="col-sm-12">
         <span>
           <button mat-raised-button class="main-background-color main-button color-white pull-right"
+            (click)="createRfq()">
+            Create RFQ
+          </button>
+        </span>
+        <span>
+          <button mat-raised-button class="main-background-color main-button color-white pull-right"
             (click)="raiseIndent()">
             Raise Indent
           </button>
