--- a/src/app/features/po/po.component.html
+++ b/src/app/features/po/po.component.html
@@ -1,6 +1,9 @@
 <div class="page-start-point">
     <div class="p-l-20 p-r-20 p-b-20 min-height parent">
         <div class="row">
+            <div class="col-sm-12 m-t-5 text-left" *ngIf="this.poMode==='view'">
+                ApproverName
+            </div>
             <div class="col-sm-12 m-t-5 text-right">
                 <div *ngIf="this.poMode==='edit'">
                     <button mat-raised-button class="main-background-color main-button color-white "
@@ -21,7 +24,7 @@
             </div>
         </div>
         <div class="main-div-po-outer">
-            <div class="main-div-po">
+            <div class="main-div-po m-b-45">
                 <app-po-card #poCard *ngIf="tableData.length" [cardData]="cardData" [mode]="this.poMode">
                 </app-po-card>
             </div>
