--- a/src/app/shared/layout/supplier-bid-layout/supplier-bid-layout.component.html
+++ b/src/app/shared/layout/supplier-bid-layout/supplier-bid-layout.component.html
@@ -1,8 +1,9 @@
-<div class="row black-border">
-    <div class="col-sm-12 p-t-20 p-b-10">
-        <div class="col-sm-8 pull-left buildsupply-logo-header">
+
+    <div class="p-10">
+        <div class="pull-left buildsupply-logo-header">
             <img src="../../../../assets/images/loginLogo.png" alt="BuildSupply_Logo">
         </div>
     </div>
+<div class="black-border">
 </div>
 <router-outlet></router-outlet>
