--- a/src/assets/scss/pages/supplier.scss
+++ b/src/assets/scss/pages/supplier.scss
@@ -83,11 +83,11 @@
 
 .material-rfq-supplies {
     background: #C7C7C7;
-    display: flex;
-    width: 100%;
-    align-items: center;
-    padding: 10px 20px;
-    justify-content: space-between;
+    // display: flex;
+    // width: 100%;
+    // align-items: center;
+    // padding: 10px 20px;
+    // justify-content: space-between;
 
     div {
         display: flex;
@@ -101,15 +101,15 @@
 
 .brand-name-rfq-supplies {
     background: #E6E6E6;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    padding: 13px 20px;
+    // display: flex;
+    // width: 100%;
+    // justify-content: space-between;
+    // padding: 13px 20px;
 
     div {
         display: flex;
         //flex: 0 0 27%;
-        flex: 0 0 30%;
+        // flex: 0 0 30%;
         color: #121212 !important;
     }
 }
@@ -123,18 +123,18 @@
 
 .table-white-background-color {
     background: #ffffff;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    padding: 12px 20px;
-    border: 1px solid #CBCBCB;
-    border-top: none;
-    align-items: center;
+    // display: flex;
+    // width: 100%;
+    // justify-content: space-between;
+    // padding: 12px 20px;
+    // border: 1px solid #CBCBCB;
+    // border-top: none;
+    // align-items: center;
 
     .mat-cell {
         display: flex;
         //flex: 0 0 27%;
-        flex: 0 0 30%;
+        // flex: 0 0 30%;
         color: #707070;
     }
 
@@ -169,6 +169,7 @@
 .submit-bid-row {
     padding: 50px;
     height: calc(100vh - 120px);
+    width:100%;
 }
 
 .bid-material {
@@ -540,5 +541,11 @@ mat-icon {
         overflow: hidden;
         text-overflow: ellipsis;
         z-index: 10;
+    }
+}
+
+.rfq-bids-table{
+    td, th{
+        border-top: none;
     }
 }
