--- a/src/app/features/po/po-detail-list/po-detail-list.component.html
+++ b/src/app/features/po/po-detail-list/po-detail-list.component.html
@@ -131,7 +131,7 @@
                 <ng-container matColumnDef="ViewPo">
                   <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                   <td mat-cell *matCellDef="let element" class="text-align-center">
-                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]" [state]="{mode:'edit'}">view
+                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'/edit']">view
                       po</a>
                   </td>
                 </ng-container>
@@ -196,7 +196,7 @@
                 <ng-container matColumnDef="ViewPo">
                   <th mat-header-cell *matHeaderCellDef class="text-align-center"></th>
                   <td mat-cell class="text-align-center" *matCellDef="let element">
-                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId]" [state]="{mode:'view'}">view
+                    <a [routerLink]="['../../po/po-generate/',element.purchaseOrderId,'/view']">view
                       po</a>
                   </td>
                 </ng-container>
