Jira Bug Fixes, Loader Done Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/po/add-grn/add-grn.component.html
+++ b/src/app/features/po/add-grn/add-grn.component.html
@@ -48,15 +48,15 @@
                         </ng-container>
 
                         <ng-container matColumnDef="Awarded Quantity">
-                            <th mat-header-cell *matHeaderCellDef>Awarded Quantity</th>
-                            <td mat-cell *matCellDef="let element">
+                            <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
+                            <td mat-cell *matCellDef="let element" class="text-align-center">
                                 {{ element.materialQuantity }}
                             </td>
                         </ng-container>
 
                         <ng-container matColumnDef="Delivered Quantity">
-                            <th mat-header-cell *matHeaderCellDef>Delivered Quantity</th>
-                            <td mat-cell *matCellDef="let element">
+                            <th mat-header-cell *matHeaderCellDef class="text-align-center">Delivered Quantity</th>
+                            <td mat-cell *matCellDef="let element" class="text-align-center">
                                 {{ element.deliveredQty }}
                             </td>
                         </ng-container>
