--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -18,3 +18,4 @@
     @import "./pages/dialog-styles.scss";
     @import "./pages/card-layout.scss";
     @import "./pages/signin-signup.scss";
+    @import "./layout/loader.scss";
