--- a/src/app/features/indent/indent-dashboard.component.html
+++ b/src/app/features/indent/indent-dashboard.component.html
@@ -43,20 +43,20 @@
 
         <!-- Name Column -->
         <ng-container matColumnDef="Estimated Quantity">
-          <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
-        <td mat-cell *matCellDef="let element">{{ element.estimatedQty }} {{element.materialUnit}}</td>
+          <th mat-header-cell *matHeaderCellDef  class="text-align-center">Estimated Quantity</th>
+        <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }} {{element.materialUnit}}</td>
         </ng-container>
 
          <!-- Name Column -->
         <ng-container matColumnDef="Requested Material">
-          <th mat-header-cell *matHeaderCellDef>Requested Material</th>
-        <td mat-cell *matCellDef="let element">  {{ element.requestedQuantity }} {{ element.materialUnit }}</td>
+          <th mat-header-cell *matHeaderCellDef  class="text-align-center">Requested Material</th>
+        <td mat-cell *matCellDef="let element"  class="text-align-center">  {{ element.requestedQuantity }} {{ element.materialUnit }}</td>
         </ng-container>
 
         <!-- Weight Column -->
         <ng-container matColumnDef="Required Quantity">
           <th mat-header-cell *matHeaderCellDef>Required Quantity</th>
-          <td mat-cell *matCellDef="let element; let i = index">
+          <td mat-cell *matCellDef="let element; let i = index" >
 
             
             
