--- a/src/app/features/po/view-grn/view-grn.component.html
+++ b/src/app/features/po/view-grn/view-grn.component.html
@@ -51,15 +51,15 @@
                             </ng-container>
 
                             <ng-container matColumnDef="Awarded Quantity">
-                                <th mat-header-cell *matHeaderCellDef>Awarded Quantity</th>
-                                <td mat-cell *matCellDef="let element">
+                                <th mat-header-cell *matHeaderCellDef class="text-align-center">Awarded Quantity</th>
+                                <td mat-cell *matCellDef="let element" class="text-align-center">
                                     {{ element.materialQuantity }}
                                 </td>
                             </ng-container>
 
                             <ng-container matColumnDef="Certified Quantity">
-                                <th mat-header-cell *matHeaderCellDef>Certified Quantity</th>
-                                <td mat-cell *matCellDef="let element">
+                                <th mat-header-cell *matHeaderCellDef class="text-align-center">Certified Quantity</th>
+                                <td mat-cell *matCellDef="let element" class="text-align-center">
                                     {{ element.deliveredQty }}
                                 </td>
                             </ng-container>
