--- a/src/app/features/rfq/project-materials/project-materials.component.html
+++ b/src/app/features/rfq/project-materials/project-materials.component.html
@@ -103,15 +103,15 @@
             </ng-container>
             <!-- Name Column -->
             <ng-container matColumnDef="Requested Quantity">
-              <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Quantity</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{ element.requestedQty }}
               </td>
             </ng-container>
             <!-- Name Column -->
             <ng-container matColumnDef="Estimated Quantity">
-              <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
-              <td mat-cell *matCellDef="let element">
+              <th mat-header-cell *matHeaderCellDef class="text-align-center">Estimated Quantity</th>
+              <td mat-cell *matCellDef="let element" class="text-align-center">
                 {{ element.estimatedQty }}
               </td>
             </ng-container>
