--- a/src/app/features/rfq/quantity-makes/quantity-makes.component.html
+++ b/src/app/features/rfq/quantity-makes/quantity-makes.component.html
@@ -78,13 +78,13 @@
               </ng-container>
               <!-- Name Column -->
               <ng-container matColumnDef="Requested Quantity">
-                <th mat-header-cell *matHeaderCellDef>Requested Quantity</th>
-                <td mat-cell *matCellDef="let element">{{ element.requestedQty }}</td>
+                <th mat-header-cell *matHeaderCellDef class="text-align-center">Requested Quantity</th>
+                <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.requestedQty }}</td>
               </ng-container>
               <!-- Name Column -->
               <ng-container matColumnDef="Estimated Quantity">
-                <th mat-header-cell *matHeaderCellDef>Estimated Quantity</th>
-                <td mat-cell *matCellDef="let element">{{ element.estimatedQty }}</td>
+                <th mat-header-cell *matHeaderCellDef class="text-align-center">Estimated Quantity</th>
+                <td mat-cell *matCellDef="let element" class="text-align-center">{{ element.estimatedQty }}</td>
               </ng-container>
               <!-- estimated rate -->
               <ng-container matColumnDef="Estimated Rate">
