--- a/src/app/features/rfq/rfq-view/rfq-view.component.html
+++ b/src/app/features/rfq/rfq-view/rfq-view.component.html
@@ -69,8 +69,8 @@
 
                         <!-- Quantity Column -->
                         <ng-container matColumnDef="Quantity">
-                            <th class="font-size14" mat-header-cell *matHeaderCellDef>Quantity</th>
-                            <td mat-cell *matCellDef="let element">
+                            <th class="font-size14" mat-header-cell *matHeaderCellDef class="text-align-center">Quantity</th>
+                            <td mat-cell *matCellDef="let element" class="text-align-center">
                                 {{ element.rfqMaterialQty }}
                             </td>
                         </ng-container>
