--- a/src/app/features/rfq/suppliers/suppliers.component.html
+++ b/src/app/features/rfq/suppliers/suppliers.component.html
@@ -119,7 +119,9 @@
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element">
           <button mat-button class="display-flex pull-right ">
-            <mat-icon class="main-color">delete_outline</mat-icon>
+           <a class="width-15-px cursor-pointer">
+                    <img src="../../../../assets/images/delete-button.png">
+                   </a>
           </button>
         </td>
       </ng-container>
