--- a/src/app/features/supplier/supplier-details/supplier-details.component.html
+++ b/src/app/features/supplier/supplier-details/supplier-details.component.html
@@ -74,7 +74,11 @@
               <th mat-header-cell *matHeaderCellDef class="edit-disable-user-details-width"></th>
               <td mat-cell *matCellDef="let element" class="edit-disable-user-details-width">
 
-                  <mat-icon aria-hidden="false" class="delete-icon" *ngIf="element.status == 0" (click)="deactivateUser(element)">delete</mat-icon> 
+                  <mat-icon aria-hidden="false" class="delete-icon" *ngIf="element.status == 0" (click)="deactivateUser(element)"> <a class="width-15-px cursor-pointer">
+                    <img src="../../../../assets/images/delete-button.png">
+                   </a></mat-icon> 
+                  
+
 
                   <span  *ngIf="element.status == 1" class="view-disabled-address-supplier"> View Address</span> 
                   <span  *ngIf="element.status == 0" class="view-address-supplier"> View Address</span> 
