--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -65,13 +65,9 @@
                 (click)="edit(projectDetails.projectId, $event)"
                 ><i class="material-icons main-color">edit</i></a
               >
-              <a
-                href="javascript:void(0)"
-                (click)="delete(projectDetails.projectId, $event)"
-                class="p-l-10 p-r-10"
-                ><i class="material-icons main-color">delete</i></a
-              >
-              
+              <a class="width-15-px p-l-10 p-r-10 cursor-pointer" (click)="delete(projectDetails.projectId, $event)">
+               <img src="../../../../assets/images/delete-button.png">
+            </a>
             </div>
           </div>
           <div class="row m-t-20">
@@ -148,7 +144,7 @@
             <div class="col-xs-12 text-left">
               <div class="font-size12 color-text-card">
                 Created : {{ projectDetails.createdAt | date: "fullDate" }} By
-                {{ projectDetails.createdBy }} (Site Enginer)
+                {{ projectDetails.createdBy }} (Site Engineer)
               </div>
             </div>
           </div>
