--- a/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
+++ b/src/app/shared/dialogs/add-edit-user/add-edit-user-component.html
@@ -86,14 +86,14 @@
         <div class="row">
           <div class="col-sm-12">
            <!-- city -->
-        <mat-form-field class="border-select add-edit-user-form-modal">
-          <mat-label>Role</mat-label>
-          <mat-select formControlName="roleId">
-            <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
-              {{role.roleName}}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+            <mat-form-field class="border-select add-edit-user-form-modal">
+              <mat-label>Role *</mat-label>
+                <mat-select formControlName="roleId">
+                  <mat-option *ngFor="let role of allRoles" [value]="role.roleId">
+                    {{role.roleName}}
+                  </mat-option>
+                </mat-select>
+            </mat-form-field>
           </div>
         </div>
 
