--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -423,3 +423,12 @@ mat-accordion{
       width:15px;
       }
   }
+
+  // SnackBar Css
+  .blue-snackbar{
+    background: $blue-color;
+    color: #ffffff;
+    .mat-simple-snackbar-action {
+        color: hsl(83, 96%, 81%) !important;
+    }
+  }
