toast msg at center and button removed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -428,7 +428,7 @@ mat-accordion{
   .blue-snackbar{
     background: $blue-color;
     color: #ffffff;
-    .mat-simple-snackbar-action {
-        color: hsl(83, 96%, 81%) !important;
+      .mat-simple-snackbar {
+      justify-content: center;
     }
   }
