Pincode Validation done, Add Project implemented in po, po-dashboard address fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/shared/dialogs/add-address/address-dialog.html
+++ b/src/app/shared/dialogs/add-address/address-dialog.html
@@ -31,6 +31,13 @@
               <div class="row border-input">
                 <mat-form-field class="col-xs-12 p-r-150 p-l-150">
                   <input matInput type="number" placeholder="Pincode" formControlName="pinCode" />
+                   <small
+                    *ngIf="newAddressForm.controls['pinCode'].hasError('required') && newAddressForm.controls['pinCode'].touched"
+                    class="error-msg"> pincode is required </small>
+                    <small
+                    *ngIf="newAddressForm.controls['pinCode'].hasError('pattern') && newAddressForm.controls['pinCode'].touched"
+                    class="error-msg"> Enter Valid Pincode</small>
+
                 </mat-form-field>
               </div>
               <div class="row border-input">
