--- a/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
+++ b/src/app/features/po/initiate-po/po-project-material/po-project-material.component.html
@@ -12,7 +12,7 @@
     <div class="row p-b-10">
         <div class="col-sm-12">
             <mat-form-field class="border-select pull-right m-r-25 custom-po-radio">
-                <mat-select formControlName="selectedProject">
+                <mat-select formControlName="selectedProject" (selectionChange)="choosenProject($event)">
                     <div class="display-flex">
                         <input class="p-l-10 p-b-5" matInput type="search" placeholder="Search project Name"
                             [(ngModel)]="searchText" [ngModelOptions]="{standalone: true}" />
@@ -20,11 +20,11 @@
                             <mat-icon>search</mat-icon>
                         </button>
                     </div>
-                    <mat-option *ngFor="
-              let project of allProjects
-                | SearchPipe: searchText:'projectName'
-            " [value]="project">{{ project.projectName }}
-                    </mat-option>(click)="choosenProject()"
+                    <mat-option *ngFor="let project of allProjects | SearchPipe: searchText:'projectName'"  [value]="project" >
+                        <span>
+                                {{ project.projectName }}
+                            </span>
+                    </mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
