--- a/src/app/shared/components/project-item/project-item.component.html
+++ b/src/app/shared/components/project-item/project-item.component.html
@@ -22,10 +22,14 @@
                 }}</a>
               </div>
               <div class="row">
-                <div class=" col-xs-8 display-flex">
+                <div class=" col-xs-10 display-flex">
                   <div class="font-size12  color-text-card text-left width50Percent line-height">
                     <i class="material-icons font-size12 color-text-card">room</i>
-                    <span class="p-l-5">{{ projectDetails.addressLine1 }}</span>
+                    <span *ngIf="projectDetails.addressLine1" class="p-l-5">{{ projectDetails.addressLine1 }}</span>
+                    <span *ngIf="projectDetails.addressLine1" class="p-l-5">, {{ projectDetails.addressLine2 }}</span>
+                    <span *ngIf="projectDetails.addressLine1" class="p-l-5">, {{ projectDetails.city }}</span>
+                    <span *ngIf="projectDetails.addressLine1" class="p-l-5">, {{ projectDetails.state }}</span>
+                    <span *ngIf="projectDetails.addressLine1" class="p-l-5">, {{ projectDetails.pinCode }}</span>
                   </div>
                   <div class="font-size12 color-text-card text-left width50Percent">
                     <i class="material-icons font-size12 color-text-card"
@@ -36,7 +40,7 @@
                 </div>
               </div>
               <div class="row">
-                <div class=" col-xs-8 display-flex">
+                <div class=" col-xs-10 display-flex">
                   <div class="font-size12 color-text-card text-left width50Percent">
                     <i class="material-icons font-size12 color-text-card">today</i>
                     <span class="p-l-5">{{ projectDetails.startDate | date }}</span> to
