Jiras closed and fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
+++ b/src/app/features/auth/sign-in-sign-up/sign-in-sign-up.component.html
@@ -2,8 +2,8 @@
            <div class="row m-0">
         <div class="col-md-8 pl-0">
             <div class="min-height">
-                <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/Artboard.png" alt="construction-site-image" class="signup-image" style="width: 100%;" />
-                <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/Artboard.png" alt="construction-site-image" class="signup-image" style="width: 100%;" />
+                <img *ngIf="tabClicked == 'Sign Up'" src="../../../assets/images/image-signup.png" alt="construction-site-image" class="signup-image" style="width: 100%;" />
+                <img *ngIf="tabClicked == 'Sign In'" src="../../../assets/images/image-login.png" alt="construction-site-image" class="signup-image" style="width: 100%;" />
             </div>
         </div>
         <div class="col-md-4 parent">
