--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -423,7 +423,17 @@ mat-accordion{
       width:15px;
       }
   }
+  .width-17-px{
+     img{
+      width:17px;
+      }
+  }
 
+.width-22-px{
+   img{
+      width:22px;
+      }
+}
   // SnackBar Css
   .blue-snackbar{
     background: $blue-color;
