--- a/src/app/features/users/user-details/user-details.component.html
+++ b/src/app/features/users/user-details/user-details.component.html
@@ -82,8 +82,15 @@
           <ng-container matColumnDef="star" stickyEnd>
             <th mat-header-cell *matHeaderCellDef class="edit-disable-user-details-width"></th>
             <td mat-cell *matCellDef="let element" class="edit-disable-user-details-width">
-                <mat-icon aria-hidden="false" (click)="deactivateUser(element)">block</mat-icon>
-              <i class="material-icons main-color" (click)="editProject(element)"> edit </i>
+                <mat-icon aria-hidden="false" (click)="deactivateUser(element)"> <a class="width-22-px p-r-10 p-t-10 cursor-pointer">
+               <img src="../../../../assets/images/user-disable.png">
+               </a></mat-icon>
+              <i class="material-icons main-color" (click)="editProject(element)"> 
+                <a class="width-17-px p-r-10 cursor-pointer">
+               <img src="../../../../assets/images/edit.png">
+               </a>
+                 </i>
+                 
             </td>
           </ng-container>
 
