Bom Table to Raise Indent Fixed Signed-off-by: subham.saha@buildsupply.com <subham.saha@buildsupply.com>

--- a/src/assets/scss/base/variables.scss
+++ b/src/assets/scss/base/variables.scss
@@ -446,3 +446,9 @@ mat-accordion{
   .error-msg{
     color:red;
   }
+
+  .justify-center{
+    .mat-sort-header-container{
+      justify-content: center;
+    }
+  }
