--- a/src/app/features/bom/bom-table/bom-table.component.html
+++ b/src/app/features/bom/bom-table/bom-table.component.html
@@ -52,7 +52,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="estimatedQty">
-          <th *matHeaderCellDef mat-sort-header class="text-align-center">
+          <th *matHeaderCellDef mat-sort-header class="text-align-center justify-center">
             Estimated Quantity
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -60,7 +60,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="requestedQuantity">
-          <th *matHeaderCellDef mat-sort-header class="text-align-center">
+          <th *matHeaderCellDef mat-sort-header class="text-align-center justify-center">
             Requested Quantity
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -68,7 +68,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="issueToProject">
-          <th *matHeaderCellDef mat-sort-header class="text-align-center">
+          <th *matHeaderCellDef mat-sort-header class="text-align-center justify-center">
             Issued To Project
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
@@ -76,7 +76,7 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="availableStock">
-          <th *matHeaderCellDef mat-sort-header class="text-align-center">
+          <th *matHeaderCellDef mat-sort-header class="text-align-center justify-center">
             Available In Stock
           </th>
           <td class="text-align-center" mat-cell *matCellDef="let element">
